# sota-mcp

./: CHANGELOG.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/sota_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_live.py  test_tools.py
