[project]
name = "sota-mcp"
version = "0.1.4"
description = "MCP server for Summits on the Air — summit lookup, spots, alerts, nearby summits"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT", email = "ki7mt@yahoo.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
]
keywords = [
    "amateur-radio", "ham-radio", "sota", "summits-on-the-air",
    "mcp", "model-context-protocol", "activator", "chaser",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Ham Radio",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://qso-graph.io"
Documentation = "https://qso-graph.io"
Repository = "https://github.com/qso-graph/sota-mcp"
Issues = "https://github.com/qso-graph/sota-mcp/issues"

[project.scripts]
sota-mcp = "sota_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sota_mcp"]
